Fixed warnings in the IDE.